# calculus-of-vision

./: .gitignore  README.md  pyproject.toml  requirements.txt  代码功能实现模块.md  代码框架.md  编码注意事项.md  脚本文档.md  视频剧本.md  说明.md
Instructions_Text/: README.md
Instructions_Text/00_项目提交/: 项目提交说明_V12.md
Instructions_Text/01_开发指南/: 代码实现指南_V10-V12.md  审美整合指南_V10-V12.md  版本架构指南.md  边界优化说明_V14.md
Instructions_Text/02_版本管理与复盘/: README.md  Scene0-V12-代码反思与优化总结_V12.md  v12版本问题总结_V12.md  v13版本反思_V13.md  v13预期方案_V13.md  专家意见与建议汇总_V10-V11-V12.md  渲染复盘-V10-第一阶段-ThreeDCamera问题_V10.md  渲染复盘-V10-第二阶段-MathTex和API问题_V10.md  渲染复盘-V12-FullSobelVideo集成问题_V12.md  渲染复盘-v15.md  版本代码对比分析_V10-V11-V12-V13.md  版本优点总结_V10-V11-V12-V13.md  目录结构反思报告_通用.md  迭代版本说明_V01.md  阶段汇报总览_全版本.md
Instructions_Text/03_方案设计/: 3B1B风格实现思路_通用.md  README.md  V12方案审核_V12.md  V12方案总览_V12.md  V14方案总览_V14.md
Instructions_Text/04_制作指南/: 旁白与剪辑指南_V12.md  纯动画改进方案_V10-V12.md
Instructions_Text/05_剧本与脚本/: 脚本文档_V12.md  视频剧本_V12.md
Instructions_Text/07_配音文案/: 配音文案_V14.md  配音文案_时间轴_V14.md  配音文案_时间轴_V14_EN.md
MD文档/: README.md  目录结构反思报告.md
final_version/: README.md  sobel_complete.py  专家建议.md  审美升级.md  审美微调和排版布局建议.md  审美整合指南.md  审美锐评.md  提交指南.md  提交检查清单.md  旁白与剪辑指南.md  时长估算.md  脚本文档.md  说明.md
一次性视频/: sobel_story.py
全流程代码/: sobel_v01_basic.py  sobel_v07_magnum_opus.py  sobel_v09_complete_rich.py  sobel_v10_iterative.py  sobel_v11_full.py  sobel_v11_scene01_02.py  sobel_v11_scene03_04.py  sobel_v12_full.py  sobel_v13_full.py  sobel_v14_full.py  utils.py  时长预估.md  配音文案_V14.md  配音文案_时间轴_V14.md  配音文案_时间轴_V14_EN.md
(+104 files in other folders)
